função de integração

--- a/Qualificação.tex
+++ b/Qualificação.tex
@@ -239,7 +239,7 @@
 
 % resumo na língua vernácula (obrigatório)
 \begin{resumo} %% AQUI COMEÇA A PÁGINA DE RESUMO
-O raciocínio probabilístico utilizando-se da teoria das probabilidades oferece recursos para codificar as incertezas de um contexto quantitativamente. Este trabalho apresenta um sistema de assistência ao motorista utilizando evidências obtidas a partir da classificação de uma série de quadros de um contexto de tráfego de veículos por uma rede neural convolucional e, em conjunto com uma base de conhecimento que conterá regras do Código Brasileiro de Trânsito, calcula a probabilidade de colisão de veículos.
+O raciocínio probabilístico utilizando-se da teoria das probabilidades oferece recursos para codificar as incertezas de um contexto quantitativamente. Este trabalho apresenta um sistema de assistência ao motorista utilizando evidências obtidas a partir da classificação de uma série de quadros de um contexto de tráfego de veículos por uma rede neural convolucional, e em conjunto com uma base de conhecimento que conterá regras do Código Brasileiro de Trânsito, calcula a probabilidade de colisão de veículos.
 
 
  \vspace{\onelineskip}
@@ -308,13 +308,13 @@ O raciocínio probabilístico utilizando-se da teoria das probabilidades oferece
 
 De acordo com o programa Europeu de avaliação carros novos, cuja sigla, Euro NCAP, vem do inglês "European New Car Assessment Programme", \citeonline{EURONCAP2025}, cita em seu estudo que 90\% dos acidentes são causados por erros  humanos. Em geral, são dois problemas que contribuem para que esses erros aconteçam. O primeiro, está ligado às violações das regras de trânsito, como velocidade acima do permitido, direção sobre influência de drogas ou álcool. O segundo, está relacionado à falta de atenção ao trânsito, à fadiga, à distração e à inexperiência do motorista.
 
-Como resposta ao segundo problema, a indústria automotiva vem desenvolvendo diversos sistemas de auxílio à direção, em Inglês "Advanced Driver Assistance Systems"(ADAS), para dar suporte aos motoristas com a finalidade de prevenir e mitigar os erros humanos na condução de veículos. Hoje, os sistemas de aviso de troca de faixa, a assistência para se manter dentro da faixa, os sistemas autônomos de emergência de mudança de direção, o  piloto automático adaptativo, os  sistemas de assistência de velocidade, entre outros, são os mais comuns.
+Como resposta ao segundo problema, a indústria automotiva vem desenvolvendo diversos sistemas de auxílio à direção, em Inglês "Advanced Driver Assistance Systems"\newline (ADAS), para dar suporte aos motoristas com a finalidade de prevenir e mitigar os erros humanos na condução de veículos. Hoje, os sistemas de aviso de troca de faixa, a assistência para se manter dentro da faixa, os sistemas autônomos de emergência de mudança de direção, o  piloto automático adaptativo, os  sistemas de assistência de velocidade, entre outros, são os mais comuns.
 
 Segundos estudo da Organização Mundial de Saúde, conforme mostrado em \citeonline{8429957}, todo ano ocorrem 1,25 milhões de mortes por acidentes relacionados ao tráfego de veículos, o que significa um gasto anual de US\$ 518 bilhões. Esses dados, além de demandarem de forma crescente medidas de segurança dos motoristas, fizeram com que os fabricantes de automóveis desenvolvessem sistemas avançados de auxílio à direção de veículos. 
 
-Para poder representar o contexto de tráfego de veículos, as técnicas de Aprendizado de Máquina, mais precisamente as Redes Neurais Artificiais (RNA) e, em especial, Redes Neurais Convolucionais (RNC), têm obtido, nos últimos anos,  grandes resultados no campo da visão computacional no que se refere a detectar, classificar e segmentar objetos. Ano após ano, os resultados obtidos no desafio de detecção e classificação de objetos proposto pela \textit{ImageNet}, uma base de dados com mais de 14 milhões de imagens\citeonline{Deng09imagenet}, mostram os avanços conseguidos pelas RNC's.
+Para poder representar o contexto de tráfego de veículos, as técnicas de Aprendizado de Máquina, mais precisamente as Redes Neurais Artificiais (RNA) e, em especial, Redes Neurais Convolucionais (RNC), têm obtido, nos últimos anos,  grandes resultados no campo da visão computacional no que se refere a detectar, classificar e segmentar objetos. Ano após ano, os resultados obtidos no desafio de detecção e classificação de objetos proposto pela \textit{ImageNet}, uma base de dados com mais de 14 milhões de imagens \citeonline{Deng09imagenet}, mostram os avanços conseguidos pelas RNCs.
 
-Apesar do aumento da quantidade de sistemas de Aprendizado de Máquina, as Redes Neurais não conseguem interpretar o contexto como um todo, mas sim mostrar todos os objetos que compõem aquele contexto. A interpretação do contexto e de suas incertezas requer regras e relações espaço-temporais. Demanda o uso do Raciocínio Probabilístico, utilizando-se de regras de lógica escritas; a lógica probabilística é uma técnica apropriada para modelar esse contexto. De acordo com \citeonline{phdthesis_problog}, aplicações que necessitam de um maior formalismo devido ao raciocínio sobre incertezas precisam mais do que lógica. Por essa razão, produziu-se uma vasta quantidade de desenvolvimentos foram feitos na área de Programação em Lógica Probabilística. $ProbLog$ é uma ferramenta de Programação de Lógica Probabilística, uma extensão do $Prolog$, que além de lógica booleana, pode receber também sentenças em Lógica de primeira ordem.
+Apesar do aumento da quantidade de sistemas de aprendizado de máquina, as redes neurais não conseguem interpretar o contexto como um todo, mas sim mostrar todos os objetos que compõem aquele contexto. A interpretação do contexto e de suas incertezas requer regras e relações espaço-temporais. Demanda o uso do raciocínio probabilístico, utilizando-se de regras de lógica escritas; a lógica probabilística é uma técnica apropriada para modelar esse contexto. De acordo com \citeonline{phdthesis_problog}, aplicações que necessitam de um maior formalismo devido ao raciocínio sobre incertezas precisam mais do que lógica. Por essa razão, produziu-se uma vasta quantidade de desenvolvimentos foram feitos na área de Programação em lógica probabilística. $ProbLog$ é uma ferramenta de programação de lógica probabilística, uma extensão do $Prolog$, que além de lógica booleana, pode receber também sentenças em lógica de primeira ordem.
 
 Este trabalho propõe um sistema ADAS que utiliza redes neurais convolucionais, empregando uma sequência de quadros de uma cena de tráfego de veículos como entrada, para obter, na sua saída, uma lista classificada com as probabilidade de os objetos detectados estarem na cena. Esta lista será utilizada como evidências para um sistema de raciocínio probabilístico, o qual será escrito em $ProbLog$. O programa conterá regras de ultrapassagens descritas no Código Brasileiro de Trânsito, que também serão codificadas em $ProbLog$. Utilizando-se tanto as regras de trânsito quanto as evidências providas pela RNC será possível inferir se uma cena apresenta possíveis situações de colisão entre veículos.
 
@@ -329,7 +329,7 @@ Nas áreas de raciocínio lógico e de aprendizado de máquina, existem diversos
 
 \section {Redes Neurais Artificiais}
 
-\citeonline{NIPS2012_4824} propuseram uma RNC que consiste em cinco camadas convolucionais. Dentre elas, existem algumas camadas de agrupamento máximo e três camadas totalmente conectadas. Optou-se pela RNC em vez de redes neurais de alimentação avante ou de alimentação direta com camadas de tamanhos similares porque as RNCs podem utilizar muito menos conexões e parâmetros, além de serem mais facilmente treinadas com pequena perda de performance. A contribuição dessa proposta se dá no sentido de indicar uma maneira eficiente e otimizada de realizar a convolução das imagens em 2D, utilizando-se de duas unidades de processamento gráfico (UPG). Além disso, a comunicação entre as UPG não é realizada em todas as camadas. Outra contribuição foi o emprego de modelagem das saídas dos neurônios (saturação não linear) de forma não tradicional. Utilizaram-se as funções retificadas lineares (FRL), que têm a propriedade de prevenir que o processo de aprendizado continue quando um exemplo já gerou uma entrada positiva, sem necessidade de normalização. Jarret et. al (2009) também mencionaram alternativas aos modelos tradicionais. 
+\citeonline{NIPS2012_4824} propuseram uma RNC que consiste em cinco camadas convolucionais. Dentre elas, existem algumas camadas de agrupamento máximo e três camadas totalmente conectadas. Optou-se pela RNC em vez de redes neurais de alimentação avante ou de alimentação direta com camadas de tamanhos similares porque as RNCs podem utilizar menos conexões e parâmetros, além de serem mais facilmente treinadas com pequena perda de performance. A contribuição dessa proposta se dá no sentido de indicar uma maneira eficiente e otimizada de realizar a convolução das imagens em 2D, utilizando-se de duas unidades de processamento gráfico (UPG). Além disso, a comunicação entre as UPG não é realizada em todas as camadas. Outra contribuição foi o emprego de modelagem das saídas dos neurônios (saturação não linear) de forma não tradicional. Utilizaram-se as funções retificadas lineares (FRL), que têm a propriedade de prevenir que o processo de aprendizado continue quando um exemplo já gerou uma entrada positiva, sem necessidade de normalização. Jarret et. al (2009) também mencionaram alternativas aos modelos tradicionais. 
 
 No trabalho proposto por \citeonline{DBLP:journals/corr/SzegedyLJSRAEVR14} para participar do "ImageNet Large-Scale Visual Recognition Challenge"(ILSVRC) de 2014, melhorou-se, sem que houvesse acréscimo computacional, uma RNC chamada de \textit{Inception}. Ainda que o estado da arte atual, na visão computacional, faça uso de camadas totalmente conectadas, introduziram-se camadas esparsas, inclusive dentro das camadas de convolução, para manter a computação inalterada. O ganho introduzido pelas camadas esparsas acontece se a distribuição de probabilidades do conjunto de dados for representada por rede neural esparsa. Dessa maneira, pode-se construir uma topologia de rede ótima, camada a camada, analisando-se as correlações estatísticas das ativações dos neurônios em camadas anteriores e agregando-se os neurônios com alta correlação na saída. Segundo \citeonline{DBLP:journals/corr/SzegedyLJSRAEVR14} esta afirmação se aproxima do Princípio de Hebbian: “Neurônios que disparam juntos permanecem conectados”. 
 
@@ -434,7 +434,7 @@ A notação matemática a ser aplicada será a seguinte:
 
 \subsection {Neurônios de entrada única}
 
-Um neurônio de entrada única pode ser visto na figura \ref{fig:Neurônio_geral1}, onde uma entrada escalar \textit{p} é multiplicada por um fator de ponderação \textit{w} formando assim \textit{wf} e enviado para a somatória. A outra entrada, de valor 1, é multiplicada por fator de erro \textit{b} e também enviado a somatória. O resultado da somatória é denominado entrada da rede e vai para uma função de transferência \textit{f} que produz um escalar \textit{a} como saída do neurônio, representado pela equação \ref{eq:neuonio_simples}
+Um neurônio de entrada única pode ser visto na figura \ref{fig:Neurônio_geral1}, onde uma entrada escalar \textit{p} é multiplicada por um fator de ponderação \textit{w} formando assim \textit{wf} e enviado para a função de integração. A outra entrada, de valor 1, é multiplicada por fator de erro \textit{b} e também enviado a função de integração. O resultado da função de integração é denominado entrada da rede e vai para uma função de transferência \textit{f} que produz um escalar \textit{a} como saída do neurônio, representado pela equação \ref{eq:neuonio_simples}
 
 \begin{figure}[H]
     \centering
@@ -529,7 +529,7 @@ Normalmente um neurônio tem mais de uma entrada, portanto um neurônio com \tex
   
 \subsection {Neurônios de uma camada} 
 
-Uma rede com apenas uma camada de neurônios $S$, como mostrado na figura \ref{fig:Neuronio_uma_camada}, recebe cada entrada \textbf{p} que está conectada com cada neurônio através da matriz do fator de ponderação e recebe um fator de erro na somatória, que passa seu resultado para a função de transferência para gerar a saída \textit{a}.
+Uma rede com apenas uma camada de neurônios $S$, como mostrado na figura \ref{fig:Neuronio_uma_camada}, recebe cada entrada \textbf{p} que está conectada com cada neurônio através da matriz do fator de ponderação e recebe um fator de erro na função de integração, que passa seu resultado para a função de transferência para gerar a saída \textit{a}.
 
 
 \begin{figure}[H]
@@ -895,7 +895,7 @@ Formalmente, um programa em \textit{ProbLog} define a distribuição sobre todos
 \end{equation}
 
 
-A somatória sobre as probabilidades de todos os mundos possíveis em um programa \textit{ProbLog} é igual a um, conforme a equação \ref{eq:distribuição_possiveis_mundos}: 
+A função de integração sobre as probabilidades de todos os mundos possíveis em um programa \textit{ProbLog} é igual a um, conforme a equação \ref{eq:distribuição_possiveis_mundos}: 
 
 \begin{equation}
 \centering
